--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -57,6 +57,7 @@
 		"react-confetti-boom": "^2.0.1",
 		"react-dom": "19.1.1",
 		"react-dropzone": "^14.3.8",
+		"react-error-boundary": "^6.0.0",
 		"react-hotkeys-hook": "^5.1.0",
 		"react-json-view-lite": "^2.5.0",
 		"react-markdown": "^10.1.0",
