--- a/packages/impoexpo-client/package.json
+++ b/packages/impoexpo-client/package.json
@@ -43,6 +43,7 @@
 		"fast-equals": "^5.2.2",
 		"fflate": "^0.8.2",
 		"gapi": "^0.0.3",
+		"get-user-locale": "^3.0.0",
 		"gsap": "^3.13.0",
 		"hash-wasm": "^4.12.0",
 		"html-to-image": "^1.11.13",
